--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,9 @@ name = "comp"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[build-dependencies] 
-lalrpop = "0.20.0"
+[build-dependencies]
+lalrpop = "0.20"
 
 [dependencies]
-lalrpop-util = { version = "0.20.0", features = ["lexer"] }
+clap = { version = "4.4", features = ["derive", "env"] }
+lalrpop-util = { version = "0.20", features = ["lexer"] }
